# robot_nav_2d

.github/workflows/: ros2-ci.yml
ros2_ws/src/path_smoothing/: CMakeLists.txt  package.xml
ros2_ws/src/path_smoothing/include/path_smoothing/: path_smoothing.h
ros2_ws/src/path_smoothing/src/: path_smoothing.cpp  path_smoothing_node.cpp
ros2_ws/src/path_smoothing/test/: test_path_smoothing_node.cpp
ros2_ws/src/robot_navigation_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_navigation_bringup/config/: turtlebot_nav.rviz
ros2_ws/src/robot_navigation_bringup/launch/: master.launch.py  master_navigation.launch.py
ros2_ws/src/robot_navigation_bringup/urdf/: simple_robot.urdf  tractor.urdf.xacro  turtlebot3_burger.urdf.xacro
ros2_ws/src/simulator/: CMakeLists.txt  package.xml
ros2_ws/src/simulator/src/: global_planner_node.cpp  simple_localization_node.cpp
ros2_ws/src/trajectory_controller/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_controller/include/trajectory_controller/: trajectory_controller.h
ros2_ws/src/trajectory_controller/src/: trajectory_controller.cpp  trajectory_controller_node.cpp
ros2_ws/src/trajectory_controller/test/: test_trajectory_controller.cpp
ros2_ws/src/trajectory_generator/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_generator/include/trajectory_generator/: trajectory_generator.h
ros2_ws/src/trajectory_generator/src/: trajectory_generator.cpp  trajectory_generator_node.cpp
ros2_ws/src/trajectory_generator/test/: test_trajectory_generator.cpp
