<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_controller</name>
  <version>0.0.1</version>
  <description>Action-based pure pursuit trajectory controller for following paths.</description>

  <maintainer email="gowtham@todo.todo">Gowtham</maintainer>
  <license>Apache-2.0</license>

  <!-- ===================================================== -->
  <!-- Build tools -->
  <!-- ===================================================== -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ===================================================== -->
  <!-- Build dependencies -->
  <!-- ===================================================== -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- ===================================================== -->
  <!-- Execution/runtime dependencies -->
  <!-- ===================================================== -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- ===================================================== -->
  <!-- Testing dependencies -->
  <!-- ===================================================== -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ===================================================== -->
  <!-- Exports -->
  <!-- ===================================================== -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- Allows other packages to find the generated interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
